// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import License should import license file 1`] = `
<body
  class="ant-scrolling-effect"
  style="width: calc(100% - 0px); overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        aria-labelledby="rcDialogTitle1"
        class="ant-modal-wrap"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="ant-modal"
          role="document"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="rcDialogTitle1"
              >
                system.license.import
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal"
              >
                <div
                  class="ant-row ant-form-item ant-form-item-has-success"
                >
                  <div
                    class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                  >
                    <label
                      class="ant-form-item-required"
                      for="file"
                      title="system.license.form.licenseFile"
                    >
                      system.license.form.licenseFile
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class=""
                        >
                          <div
                            class="ant-upload ant-upload-select ant-upload-select-text"
                          >
                            <span
                              class="ant-upload"
                              role="button"
                              tabindex="0"
                            >
                              <input
                                accept=""
                                id="file"
                                style="display: none;"
                                type="file"
                              />
                              <button
                                class="ant-btn"
                                type="button"
                              >
                                <span>
                                  common.upload
                                </span>
                              </button>
                            </span>
                          </div>
                          <div
                            class="ant-upload-list ant-upload-list-text"
                          >
                            <div
                              class="ant-upload-list-text-container"
                            >
                              <div
                                class="ant-upload-list-item ant-upload-list-item-undefined ant-upload-list-item-list-type-text"
                              >
                                <div
                                  class="ant-upload-list-item-info"
                                >
                                  <span
                                    class="ant-upload-span"
                                  >
                                    <div
                                      class="ant-upload-text-icon"
                                    >
                                      <span
                                        aria-label="paper-clip"
                                        class="anticon anticon-paper-clip"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="paper-clip"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M779.3 196.6c-94.2-94.2-247.6-94.2-341.7 0l-261 260.8c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l261-260.8c32.4-32.4 75.5-50.2 121.3-50.2s88.9 17.8 121.2 50.2c32.4 32.4 50.2 75.5 50.2 121.2 0 45.8-17.8 88.8-50.2 121.2l-266 265.9-43.1 43.1c-40.3 40.3-105.8 40.3-146.1 0-19.5-19.5-30.2-45.4-30.2-73s10.7-53.5 30.2-73l263.9-263.8c6.7-6.6 15.5-10.3 24.9-10.3h.1c9.4 0 18.1 3.7 24.7 10.3 6.7 6.7 10.3 15.5 10.3 24.9 0 9.3-3.7 18.1-10.3 24.7L372.4 653c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l215.6-215.6c19.9-19.9 30.8-46.3 30.8-74.4s-11-54.6-30.8-74.4c-41.1-41.1-107.9-41-149 0L463 364 224.8 602.1A172.22 172.22 0 00174 724.8c0 46.3 18.1 89.8 50.8 122.5 33.9 33.8 78.3 50.7 122.7 50.7 44.4 0 88.8-16.9 122.6-50.7l309.2-309C824.8 492.7 850 432 850 367.5c.1-64.6-25.1-125.3-70.7-170.9z"
                                          />
                                        </svg>
                                      </span>
                                    </div>
                                    <span
                                      class="ant-upload-list-item-name"
                                      title="test.license"
                                    >
                                      test.license
                                    </span>
                                    <span
                                      class="ant-upload-list-item-card-actions"
                                    >
                                      <button
                                        class="ant-btn ant-btn-text ant-btn-sm ant-btn-icon-only ant-upload-list-item-card-actions-btn"
                                        title="Remove file"
                                        type="button"
                                      >
                                        <span
                                          aria-label="delete"
                                          class="anticon anticon-delete"
                                          role="img"
                                          tabindex="-1"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="delete"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                            />
                                          </svg>
                                        </span>
                                      </button>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
              <div
                class="ant-table-wrapper"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div>
                    <div
                      class="ant-spin ant-spin-spinning"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <div
                      class="ant-table ant-table-empty"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                        >
                          <table
                            style="table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                >
                                  system.license.table.name
                                </th>
                                <th
                                  class="ant-table-cell"
                                >
                                  system.license.table.limit
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                class="ant-table-placeholder"
                              >
                                <td
                                  class="ant-table-cell"
                                  colspan="2"
                                >
                                  <div
                                    class="ant-empty ant-empty-normal"
                                  >
                                    <div
                                      class="ant-empty-image"
                                    >
                                      <svg
                                        class="ant-empty-img-simple"
                                        height="41"
                                        viewBox="0 0 64 41"
                                        width="64"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <g
                                          fill="none"
                                          fill-rule="evenodd"
                                          transform="translate(0 1)"
                                        >
                                          <ellipse
                                            class="ant-empty-img-simple-ellipse"
                                            cx="32"
                                            cy="33"
                                            rx="32"
                                            ry="7"
                                          />
                                          <g
                                            class="ant-empty-img-simple-g"
                                            fill-rule="nonzero"
                                          >
                                            <path
                                              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                            />
                                            <path
                                              class="ant-empty-img-simple-path"
                                              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                            />
                                          </g>
                                        </g>
                                      </svg>
                                    </div>
                                    <div
                                      class="ant-empty-description"
                                    >
                                      No Data
                                    </div>
                                  </div>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn"
                type="button"
              >
                <span>
                  common.close
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary"
                type="button"
              >
                <span>
                  common.submit
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Import License should import license file 2`] = `
<body
  class="ant-scrolling-effect"
  style="width: calc(100% - 0px); overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        aria-labelledby="rcDialogTitle1"
        class="ant-modal-wrap"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="ant-modal"
          role="document"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="rcDialogTitle1"
              >
                system.license.import
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal"
              >
                <div
                  class="ant-row ant-form-item ant-form-item-has-success"
                >
                  <div
                    class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                  >
                    <label
                      class="ant-form-item-required"
                      for="file"
                      title="system.license.form.licenseFile"
                    >
                      system.license.form.licenseFile
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class=""
                        >
                          <div
                            class="ant-upload ant-upload-select ant-upload-select-text"
                          >
                            <span
                              class="ant-upload"
                              role="button"
                              tabindex="0"
                            >
                              <input
                                accept=""
                                id="file"
                                style="display: none;"
                                type="file"
                              />
                              <button
                                class="ant-btn"
                                type="button"
                              >
                                <span>
                                  common.upload
                                </span>
                              </button>
                            </span>
                          </div>
                          <div
                            class="ant-upload-list ant-upload-list-text"
                          >
                            <div
                              class="ant-upload-list-text-container"
                            >
                              <div
                                class="ant-upload-list-item ant-upload-list-item-undefined ant-upload-list-item-list-type-text"
                              >
                                <div
                                  class="ant-upload-list-item-info"
                                >
                                  <span
                                    class="ant-upload-span"
                                  >
                                    <div
                                      class="ant-upload-text-icon"
                                    >
                                      <span
                                        aria-label="paper-clip"
                                        class="anticon anticon-paper-clip"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="paper-clip"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M779.3 196.6c-94.2-94.2-247.6-94.2-341.7 0l-261 260.8c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l261-260.8c32.4-32.4 75.5-50.2 121.3-50.2s88.9 17.8 121.2 50.2c32.4 32.4 50.2 75.5 50.2 121.2 0 45.8-17.8 88.8-50.2 121.2l-266 265.9-43.1 43.1c-40.3 40.3-105.8 40.3-146.1 0-19.5-19.5-30.2-45.4-30.2-73s10.7-53.5 30.2-73l263.9-263.8c6.7-6.6 15.5-10.3 24.9-10.3h.1c9.4 0 18.1 3.7 24.7 10.3 6.7 6.7 10.3 15.5 10.3 24.9 0 9.3-3.7 18.1-10.3 24.7L372.4 653c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l215.6-215.6c19.9-19.9 30.8-46.3 30.8-74.4s-11-54.6-30.8-74.4c-41.1-41.1-107.9-41-149 0L463 364 224.8 602.1A172.22 172.22 0 00174 724.8c0 46.3 18.1 89.8 50.8 122.5 33.9 33.8 78.3 50.7 122.7 50.7 44.4 0 88.8-16.9 122.6-50.7l309.2-309C824.8 492.7 850 432 850 367.5c.1-64.6-25.1-125.3-70.7-170.9z"
                                          />
                                        </svg>
                                      </span>
                                    </div>
                                    <span
                                      class="ant-upload-list-item-name"
                                      title="test.license"
                                    >
                                      test.license
                                    </span>
                                    <span
                                      class="ant-upload-list-item-card-actions"
                                    >
                                      <button
                                        class="ant-btn ant-btn-text ant-btn-sm ant-btn-icon-only ant-upload-list-item-card-actions-btn"
                                        title="Remove file"
                                        type="button"
                                      >
                                        <span
                                          aria-label="delete"
                                          class="anticon anticon-delete"
                                          role="img"
                                          tabindex="-1"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="delete"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                            />
                                          </svg>
                                        </span>
                                      </button>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
              <div
                class="ant-table-wrapper"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                        >
                          <table
                            style="table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                >
                                  system.license.table.name
                                </th>
                                <th
                                  class="ant-table-cell"
                                >
                                  system.license.table.limit
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                class="ant-table-row ant-table-row-level-0"
                                data-row-key="server"
                              >
                                <td
                                  class="ant-table-cell"
                                >
                                  服务器
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  10
                                </td>
                              </tr>
                              <tr
                                class="ant-table-row ant-table-row-level-0"
                                data-row-key="server2"
                              >
                                <td
                                  class="ant-table-cell"
                                >
                                  服务器2
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  9
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                    <ul
                      class="ant-pagination ant-table-pagination ant-table-pagination-right"
                      unselectable="unselectable"
                    >
                      <li
                        aria-disabled="true"
                        class="ant-pagination-prev ant-pagination-disabled"
                        title="Previous Page"
                      >
                        <button
                          class="ant-pagination-item-link"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            aria-label="left"
                            class="anticon anticon-left"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="left"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                      <li
                        class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                        tabindex="0"
                        title="1"
                      >
                        <a
                          rel="nofollow"
                        >
                          1
                        </a>
                      </li>
                      <li
                        aria-disabled="true"
                        class="ant-pagination-next ant-pagination-disabled"
                        title="Next Page"
                      >
                        <button
                          class="ant-pagination-item-link"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            aria-label="right"
                            class="anticon anticon-right"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="right"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn"
                type="button"
              >
                <span>
                  common.close
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary"
                type="button"
              >
                <span>
                  common.submit
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Import License should match snapshot 1`] = `
<body
  class="ant-scrolling-effect"
  style="width: calc(100% - 0px); overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        aria-labelledby="rcDialogTitle0"
        class="ant-modal-wrap"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="ant-modal"
          role="document"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="rcDialogTitle0"
              >
                system.license.import
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal"
              >
                <div
                  class="ant-row ant-form-item"
                >
                  <div
                    class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-7"
                  >
                    <label
                      class="ant-form-item-required"
                      for="file"
                      title="system.license.form.licenseFile"
                    >
                      system.license.form.licenseFile
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-13"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class=""
                        >
                          <div
                            class="ant-upload ant-upload-select ant-upload-select-text"
                          >
                            <span
                              class="ant-upload"
                              role="button"
                              tabindex="0"
                            >
                              <input
                                accept=""
                                id="file"
                                style="display: none;"
                                type="file"
                              />
                              <button
                                class="ant-btn"
                                type="button"
                              >
                                <span>
                                  common.upload
                                </span>
                              </button>
                            </span>
                          </div>
                          <div
                            class="ant-upload-list ant-upload-list-text"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
              <div
                class="ant-table-wrapper"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-empty"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                        >
                          <table
                            style="table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                >
                                  system.license.table.name
                                </th>
                                <th
                                  class="ant-table-cell"
                                >
                                  system.license.table.limit
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                class="ant-table-placeholder"
                              >
                                <td
                                  class="ant-table-cell"
                                  colspan="2"
                                >
                                  <div
                                    class="ant-empty ant-empty-normal"
                                  >
                                    <div
                                      class="ant-empty-image"
                                    >
                                      <svg
                                        class="ant-empty-img-simple"
                                        height="41"
                                        viewBox="0 0 64 41"
                                        width="64"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <g
                                          fill="none"
                                          fill-rule="evenodd"
                                          transform="translate(0 1)"
                                        >
                                          <ellipse
                                            class="ant-empty-img-simple-ellipse"
                                            cx="32"
                                            cy="33"
                                            rx="32"
                                            ry="7"
                                          />
                                          <g
                                            class="ant-empty-img-simple-g"
                                            fill-rule="nonzero"
                                          >
                                            <path
                                              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                            />
                                            <path
                                              class="ant-empty-img-simple-path"
                                              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                            />
                                          </g>
                                        </g>
                                      </svg>
                                    </div>
                                    <div
                                      class="ant-empty-description"
                                    >
                                      No Data
                                    </div>
                                  </div>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn"
                type="button"
              >
                <span>
                  common.close
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary"
                type="button"
              >
                <span>
                  common.submit
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Import License should match snapshot 2`] = `
<body
  class=""
  style=""
>
  <div />
</body>
`;
